--- a/conf/app.ini
+++ b/conf/app.ini
@@ -35,7 +35,7 @@ LogoPcUrl            = views/img/logo.png
 LogoWaterUrl         = views/img/water-small.png
 Sitepre              = http
 Siteurl              = 127.0.0.1
-Sitename             = MyZone
+Sitename             = I M MIAO
 Sitebrief            = myzone
 Timezone             = asia/shanghai
 Lang                 = zh-cn
