--- a/conf/app.ini
+++ b/conf/app.ini
@@ -20,7 +20,7 @@ ImageAlloweXts  = .jpg,.jpeg,.png
 RuntimeRootPath = runtime/
 
 [server]
-RunMode              = debug
+RunMode              = release
 HttpPort             = 8080
 ReadTimeout          = 60
 WriteTimeout         = 60
@@ -36,7 +36,6 @@ LogoWaterUrl         = views/img/water-small.png
 Sitepre              = http
 Siteurl              = 127.0.0.1
 Sitename             = I M MIAO
-Sitebrief            = myzone
 Timezone             = asia/shanghai
 Lang                 = zh-cn
 Runlevel             = 5
